k8s/kustomize/argo-workflows/namespace.yaml
#
# nimbus
# argo-workflows namespace
#

apiVersion: v1
kind: Namespace
metadata:
  name: argo
